# Compiler_starter_Aman

./: .pdm-python  Dockerfile  Manual.md  README.md  Readme.md  docker-compose.yml  gui_app.py  pyproject.toml  requirements.txt  web_app.py
components/: lexica.py  parsers.py
templates/: index.html
